# MakerSpaceScanner

./: CMakeLists.txt  README.md  admin.cpp  admin.h  close.cpp  close.h  init.cpp  init.h  main.cpp  main.py  splash.cpp  splash.h  student.cpp  student.h
